Dashboard Admin (get users and create users)

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,30 +1,30 @@
+<!-- tabel sesuai yang ada di database -->
 <table class="table table-striped">
-    <thead>
-        <tr>
-            <th>name</th>
-            <th>photo profile</th>
-            <th>age</th>
-            <th>phone number</th>
-        </tr>       
-    </thead>
-    <tbody>
-        <% users.map((user)=> { %>
-            <tr>
-                <td>
-                    <%= user.firstName %>
-                </td>
-                <td>
-                    <img src="<%= user.photoProfile %>" alt="Profile photo" class="rounded mx-auto d-block"
-                        style="width: 100px; height: 100px;">
-                </td>
-                <td>
-                    <%= user.age %>
-                </td>
-                <td>
-                    <%= user.phoneNumber %>
-                </td>
-            </tr>
-            <% }) %>
-        </tbody>
+  <thead>
+    <tr>
+      <th>name</th>
+      <th>photo profile</th>
+      <th>age</th>
+      <th>phone number</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- looping array -->
+    <% users.map((user)=> { %>
+    <tr>
+      <!-- memanggil opsion dari respon data API ke ejs -->
+      <td><%= user.firstName %></td>
+      <td>
+        <img
+          src="<%= user.photoProfile %>"
+          alt="Profile photo"
+          class="rounded mx-auto d-block"
+          style="width: 100px; height: 100px"
+        />
+      </td>
+      <td><%= user.age %></td>
+      <td><%= user.phoneNumber %></td>
+    </tr>
+    <% }) %>
+  </tbody>
 </table>
-
