--- a/public/assets/index.css
+++ b/public/assets/index.css
@@ -1,8 +1,8 @@
 h1 {
-    color: yellow;
+  color: rgb(7, 48, 79);
 }
 
 img {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
